--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     implementation files('libs/jxl-2.6.jar')
     compile 'com.android.support:support-v4:23.4.0'
     compile 'com.android.support:design:23.4.0'
+//    implementation 'com.android.support:recyclerview-v7:27.1.0'
 }
